; ModuleID = '/home/carl/AnghaBench/git/extr_submodule.c_check_for_new_submodule_commits.c'
source_filename = "/home/carl/AnghaBench/git/extr_submodule.c_check_for_new_submodule_commits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }

@initialized_fetch_ref_tips = common dso_local global i32 0, align 4
@append_oid_to_array = common dso_local global i32 0, align 4
@ref_tips_before_fetch = common dso_local global i32 0, align 4
@ref_tips_after_fetch = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @check_for_new_submodule_commits(%struct.object_id* %0) #0 {
  %2 = alloca %struct.object_id*, align 8
  store %struct.object_id* %0, %struct.object_id** %2, align 8
  %3 = load i32, i32* @initialized_fetch_ref_tips, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %8, label %5

5:                                                ; preds = %1
  %6 = load i32, i32* @append_oid_to_array, align 4
  %7 = call i32 @for_each_ref(i32 %6, i32* @ref_tips_before_fetch)
  store i32 1, i32* @initialized_fetch_ref_tips, align 4
  br label %8

8:                                                ; preds = %5, %1
  %9 = load %struct.object_id*, %struct.object_id** %2, align 8
  %10 = call i32 @oid_array_append(i32* @ref_tips_after_fetch, %struct.object_id* %9)
  ret void
}

declare dso_local i32 @for_each_ref(i32, i32*) #1

declare dso_local i32 @oid_array_append(i32*, %struct.object_id*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
